<resources>
    <string name="app_name">AppTracker</string>
    <string name="editedModified">Edited:</string>

    <string name="discardDialogMessage">Are you sure you want to discard changes to this event?</string>

    <string name="areYouSureDialogTitle">Are you sure?</string>
    <string name="deleteDialogMessage">This will be permanently deleted</string>

    <string name="pleaseFillForm">Please fill in the form before saving</string>

    <string name="search_hint">Search for an Application</string>

    <string name="addFirstApplication">Click the + button to add your first Application.</string>
    <string name="addFirstStage">Click the + button to add your first Stage.</string>
    <string name="noResultsWithFilter">"No results match your filter."</string>
    <string name="noMatchFromSearch">"No match from search."</string>

    <string name="select_all">Select All</string>
    <string name="deprioritise_applications">Deprioritise Applications</string>
    <string name="prioritise_applications">Prioritise Applications</string>
    <string name="delete_applications">Delete Applications</string>
    <string name="create_new_stage">Create new Stage</string>
    <string name="delete_application">Delete Application</string>
    <string name="edit_application">Edit Application</string>

    <string name="application">Application</string>
    <string name="stage">Stage</string>

    <string name="company">Company</string>
    <string name="role">Role</string>
    <string name="length">Length</string>
    <string name="location">Location</string>
    <string name="website">Website</string>
    <string name="salary">Salary</string>
    <string name="no_salary">No Salary</string>
    <string name="notes">Notes</string>
    <string name="no_notes">No Notes</string>
    <string name="status">Status</string>
    <string name="completed">Completed?</string>
    <string name="waiting_for_response">Waiting for response?</string>
    <string name="successful">Successful?</string>
    <string name="pick_deadline_date">Pick Deadline Date</string>
    <string name="pick_start_date">Pick Start Date</string>
    <string name="pick_completion_date">Pick Completion Date</string>
    <string name="pick_reply_date">Pick Reply Date</string>
    <string name="image_shows_if_the_application_is_of_priority_or_is_a_favourite">
        Image shows if the application is of priority, or is a favourite.
    </string>

    <string name="current_status">Current Status</string>
    <string name="date_of_deadline">Deadline Date</string>
    <string name="date_of_start">Start Date</string>
    <string name="no_date_of_start">No Start Date</string>
    <string name="date_of_completion">Completion Date</string>
    <string name="no_date_of_completion">No Completion Date</string>
    <string name="date_of_reply">Reply Date</string>
    <string name="no_date_of_reply">No Reply Date</string>
    <string name="date">Date</string>
    <string name="image_shows_the_current_status_of_the_application">Image shows the current status of the application.</string>
    <string name="search_applications">Search Applications</string>
    <string name="sort_applications">Sort Applications</string>
    <string name="filter_applications">Filter Applications</string>
    <string name="about">About</string>
    <string name="filters">Filters</string>
    <string name="reset_all">Reset All</string>
    <string name="apply">Apply</string>
    <string name="only_priority">Only Priority</string>

    <string name="deleted_snackbar_string">Deleted</string>
    <string name="undo_snackbar_string">Undo</string>
    <string name="save">Save</string>
    <string name="recycler_section_title">Section Title</string>

    <string name="application_details_title">Application Details</string>
    <string name="stages_title">Stages</string>
    <string name="application_overview_title">Application Overview</string>
    <string name="stage_details_title">Stage Details</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="none">None</string>
    <string name="pound_sign">£</string>
    <string name="database_date_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="status_icon_file_prefix">status_</string>
    <string name="edit_application_activity_title">Edit Application</string>
    <string name="new_application_activity_title">New Application</string>
    <string name="application_validate_company_name">Please enter the company name</string>
    <string name="application_validate_role">Please enter the role</string>
    <string name="application_validate_salary">Please enter a valid salary with only number digits</string>
    <string name="multi_select_applications_selected">applications selected</string>
    <string name="multi_select_single_application_selected">application selected</string>
    <string name="filter_none_selected">None selected</string>
    <string name="selections_will_be_cleared">All selections will be cleared</string>
    <string name="ascending_order">Ascending Order</string>
    <string name="descending_order">Descending Order</string>
    <string name="edit_stage_activity_title">Edit Stage</string>
    <string name="new_stage_activity_title">New Stage</string>
    <string name="stage_name_validation">Please enter the stage name</string>
    <string name="stage_name_suggestions">Stage name suggestions</string>
    <string name="licences_title">Open Source Licences</string>

    <string name="app_description">Organise and track all your job applications in one central place.</string>
    <string name="email_address">memonadestudios+feedback@gmail.com</string>
    <string name="developer_name">Developed by Memonade</string>
    <string name="feedback">Feedback</string>
    <string name="delete_stage">Delete Stage</string>
    <string name="edit_stage">Edit Stage</string>
    <string name="send_email_intent_message">Send email…</string>
    <string name="feedback_email_body">It\'s a great app, but it really needs…</string>
    <string name="rate_app">Rate this app on the Play Store</string>
    <string name="empty_list_message">Empty List Message</string>
    <string name="results">Results</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="modified_date">Modified Date</string>
    <string name="created_date">Created Date</string>
    <string name="company_name">Company Name</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="stage_name_suggestion_icon">Stage name suggestion icon</string>

</resources>
