<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/create_new_application_stage"
        android:icon="@drawable/ic_add_white_24dp"
        android:id="@+id/action_create_stage"
        app:showAsAction="ifRoom"/>

    <item
        android:title="@string/deprioritise_applications"
        android:icon="@drawable/ic_star_white_24dp"
        android:id="@+id/action_mode_deprioritise"
        app:showAsAction="ifRoom"/>

    <item
        android:title="@string/prioritise_applications"
        android:icon="@drawable/ic_star_border_white_24dp"
        android:id="@+id/action_mode_prioritise"
        app:showAsAction="ifRoom"/>

    <item
        android:title="@string/delete_application"
        android:icon="@drawable/ic_delete_white_24dp"
        android:id="@+id/action_delete_application"
        app:showAsAction="ifRoom"/>

    <item
        android:title="@string/edit_application"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:id="@+id/action_edit_application"
        app:showAsAction="ifRoom"/>

</menu>