<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="70dp"
    style="@style/customCardView">

    <RelativeLayout
        style="@style/rowCardViewRelativeLayout">

        <TextView
            android:text="@string/stage"
            android:id="@+id/stageNameCardView"
            style="@style/rowCardViewTitle"/>

        <TextView
            android:text="@string/current_status"
            android:id="@+id/statusCardView"
            style="@style/rowCardViewSmallTitle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:id="@+id/updatedDateCardView"
            android:text="@string/date"/>

        <ImageView
            android:id="@+id/stageStatusIcon"
            android:layout_below="@id/updatedDateCardView"
            style="@style/statusIcon"
            android:contentDescription="@string/image_shows_the_current_status_of_the_internship"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>
