<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:paddingTop="10dp"
    android:paddingBottom="4dp">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        android:id="@+id/statusDialogListView"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/statusDialogListView"
        android:layout_marginTop="5dp"
        android:background="@android:color/black"
        android:alpha="0.1"
        android:id="@+id/separator"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/clear"
        android:id="@+id/clearButton"
        style="?android:attr/buttonBarButtonStyle"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/separator"
        android:text="@string/apply"
        android:id="@+id/applyButton"
        style="?android:attr/buttonBarButtonStyle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator"
        android:layout_toStartOf="@id/applyButton"
        android:layout_toLeftOf="@id/applyButton"
        android:text="@string/cancel"
        android:id="@+id/cancelButton"
        style="?android:attr/buttonBarButtonStyle"/>

</RelativeLayout>