<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/customCardView">

    <ImageView
        style="@style/priorityBookmark"
        android:id="@+id/priorityImage"
        android:contentDescription="@string/image_shows_if_the_internship_is_of_priority_or_is_a_favourite"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            style="@style/headerCardViewLinearLayout"
            android:id="@+id/internshipDetailsLayout">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/companyGroup"
                android:layout_marginBottom="@dimen/cardViewTitlesMarginBottom">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company"
                    style="@style/cardViewTitles"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company"
                    android:textSize="@dimen/cardViewTextSize"
                    android:id="@+id/companyNameText"/>

            </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/roleGroup"
            android:layout_marginBottom="@dimen/cardViewTitlesMarginBottom">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/role"
                    style="@style/cardViewTitles"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/role"
                    android:textSize="@dimen/cardViewTextSize"
                    android:id="@+id/roleText"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/lengthGroup"
                android:layout_marginBottom="@dimen/cardViewTitlesMarginBottom">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/length"
                    style="@style/cardViewTitles"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/length"
                    android:textSize="@dimen/cardViewTextSize"
                    android:id="@+id/lengthText"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/locationGroup"
                android:layout_marginBottom="@dimen/cardViewTitlesMarginBottom">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    style="@style/cardViewTitles"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textSize="@dimen/cardViewTextSize"
                    android:id="@+id/locationText"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/urlGroup"
                android:layout_marginBottom="@dimen/cardViewTitlesMarginBottom">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website"
                    style="@style/cardViewTitles"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website"
                    android:textSize="@dimen/cardViewTextSize"
                    android:id="@+id/urlText"
                    android:autoLink="web"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/salaryGroup"
                android:layout_marginBottom="@dimen/cardViewTitlesMarginBottom">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salary"
                    style="@style/cardViewTitles"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salary"
                    android:textSize="@dimen/cardViewTextSize"
                    android:id="@+id/salaryText"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/notesGroup"
                android:layout_marginBottom="@dimen/cardViewTitlesMarginBottom">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notes"
                    style="@style/cardViewTitles"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notes"
                    android:textSize="@dimen/cardViewTextSize"
                    android:id="@+id/notesText"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/editedDateInternshipText"
            style="@style/editedModifiedText" />

    </RelativeLayout>

</android.support.v7.widget.CardView>